class Force:
    def __init__(self, fx: float = 0.0, fy: float = 0.0, fz: float = 0.0):
        self.fx: float = fx
        self.fy: float = fy
        self.fz: float = fz
