class Masse:
    def __init__(self, valeur: float = 0.0):
        self.valeur: float = valeur
