class Vitesse:
    def __init__(self, vx: float = 0.0, vy: float = 0.0, vz: float = 0.0):
        self.vx: float = vx
        self.vy: float = vy
        self.vz: float = vz
