from __future__ import annotations

from typing import Any


class AgentIA:
    def act(self, observation: Any) -> Any:
        return observation

    def learn(self) -> None:
        pass
