from __future__ import annotations

from src.Monde.Monde import Monde


class SystemePhysique_Aerodynamique:
    def update(self, monde: Monde, dt: float) -> None:
        pass
